# gdi-multicorn-scripts

./: README.md  pyproject.toml
gdifdw/: agristack-kvk-fdw.py  assam-village-cadastral-fdw.py  ogcfdw.py
