[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gdifdw"
authors = [
    {name = "GDI"},
]
description = "Multicorn scripts for GDI for Postgres Foreign Data Wrappers"
requires-python = ">=3.9"
keywords = ["gdi", "multicorn"]
dependencies = [
    "requests",
]
dynamic = ["version"]
