[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gdifdw"
authors = [
    {name = "GDI"},
]
version = "0.0.1"
description = "Multicorn scripts for GDI for Postgres Foreign Data Wrappers"
requires-python = "==3.9"
keywords = ["gdi", "multicorn"]
dependencies = [
    "requests",
    "requests-cache",
]
